Add task 6 on homework18