@@ -1,8 +1,8 @@
 package src.main.homeworks.hw18;
 
 import java.util.*;
-import java.util.stream.Collectors;
 import java.time.LocalDate;
+import java.util.stream.Collectors;
 
 public class Demo {
     public static void main(String[] args) {
@@ -10,26 +10,26 @@ public class Demo {
         Random rand = new Random();
 
 
-        products.add(new Product("Apple", 100, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Banana", 50, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 140, false, LocalDate.now().minusDays(rand.nextInt(372))));
-        products.add(new Product("Tea", 200, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 400, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Apple", 105, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Milk", 120, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Cheese", 300, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Tea", 250, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 75, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Banana", 70, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 60, true, LocalDate.now().minusDays(rand.nextInt(380))));
-        products.add(new Product("Cheese", 30, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Tea", 130, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Coffee", 250, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Apple", 95, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Banana", 55, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Apple", 20, false, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 50, true, LocalDate.now().minusDays(rand.nextInt(21))));
-        products.add(new Product("Book", 350, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(1,"Apple", 100, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(2, "Banana", 50, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(3,"Book", 140, false, LocalDate.now().minusDays(rand.nextInt(372))));
+        products.add(new Product(4,"Tea", 200, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(5,"Book", 400, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(6,"Apple", 105, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(7,"Milk", 120, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(8,"Cheese", 300, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(9,"Tea", 250, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(10,"Book", 75, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(11,"Banana", 70, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(12,"Book", 60, true, LocalDate.now().minusDays(rand.nextInt(380))));
+        products.add(new Product(13,"Cheese", 30, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(14,"Tea", 130, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(15,"Coffee", 250, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(16,"Apple", 95, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(17,"Banana", 55, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(18,"Apple", 20, false, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(19,"Book", 50, true, LocalDate.now().minusDays(rand.nextInt(21))));
+        products.add(new Product(20,"Book", 350, true, LocalDate.now().minusDays(rand.nextInt(21))));
 
         System.out.println("All products: ");
         for (Product product : products) {
@@ -42,7 +42,7 @@ public class Demo {
                 .filter(product -> product.getType().equalsIgnoreCase("book"))
                 .filter(book -> book.getPrice() > 250)
                 .peek(System.out::println)
-                .collect(Collectors.toList());
+                .toList();
 
         //2.2
         System.out.println("\nBooks with the possibility of applying a discount and the new price of -10%: ");
@@ -52,7 +52,7 @@ public class Demo {
                 .map(Product::new)
                 .peek(book -> book.applyDiscount(10))
                 .peek(System.out::println)
-                .collect(Collectors.toList());
+                .toList();
 
         //3.2, 3.3
         Product bookWithMinPrice = products.stream()
@@ -67,7 +67,7 @@ public class Demo {
                 .sorted(Comparator.comparing(Product::getDateAdded).reversed())
                 .limit(3)
                 .peek(System.out::println)
-                .collect(Collectors.toList());
+                .toList();
 
         //5.2
         LocalDate firstDayOfThisYear = LocalDate.of(LocalDate.now().getYear(), 1, 1);
@@ -79,6 +79,12 @@ public class Demo {
                 .sum();
         System.out.println("\nTotal cost: " + totalCost);
 
-        //6.
+        //6.2
+        System.out.println("\nProduct dictionary by type:");
+        Map<String, List<Product>> productsByType = products.stream()
+                .collect(Collectors.groupingBy(Product::getType));
+        System.out.println(productsByType);
+
+        System.out.println();
     }
 }
